--- a/llami.cabal
+++ b/llami.cabal
@@ -1,5 +1,5 @@
 cabal-version:      3.0
-name:               ollamaphon
+name:               llami
 version:            0.1.0.0
 -- synopsis:
 -- description:
